libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__nested_generics.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Nested generic types
expression: Container<Wrapper<T>>
info:
  kind: Ok
---
Type#4294967040@11
  TypeKind (Path)
    Path#4294967040@11 (rooted: false)
      PathSegment#4294967040@10 (name: Container)
        GenericArgument#4294967040@9
          Type#4294967040@8
            TypeKind (Path)
              Path#4294967040@8 (rooted: false)
                PathSegment#4294967040@7 (name: Wrapper)
                  GenericArgument#4294967040@6
                    Type#4294967040@5
                      TypeKind (Path)
                        Path#4294967040@5 (rooted: false)
                          PathSegment#4294967040@4 (name: T)
