libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__optional_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Optional type pattern
expression: Option<Value>
info:
  kind: Ok
---
Type#4294967040@7
  TypeKind (Path)
    Path#4294967040@7 (rooted: false)
      PathSegment#4294967040@6 (name: Option)
        GenericArgument#4294967040@5
          Type#4294967040@4
            TypeKind (Path)
              Path#4294967040@4 (rooted: false)
                PathSegment#4294967040@3 (name: Value)
