libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__qualified_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Qualified path
expression: "Std::String"
info:
  kind: Ok
---
Type#4294967040@5
  TypeKind (Path)
    Path#4294967040@5 (rooted: false)
      PathSegment#4294967040@2 (name: Std)
      PathSegment#4294967040@4 (name: String)
