libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__simple_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Simple path type
expression: Int
info:
  kind: Ok
---
Type#4294967040@3
  TypeKind (Path)
    Path#4294967040@3 (rooted: false)
      PathSegment#4294967040@2 (name: Int)
