libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__simple_union.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Simple union type
expression: Int | String
info:
  kind: Ok
---
Type#4294967040@7
  TypeKind (Union)
    UnionType#4294967040@7
      Type#4294967040@3
        TypeKind (Path)
          Path#4294967040@3 (rooted: false)
            PathSegment#4294967040@2 (name: Int)
      Type#4294967040@6
        TypeKind (Path)
          Path#4294967040@6 (rooted: false)
            PathSegment#4294967040@5 (name: String)
