libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__single_element_tuple.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Single-element tuple with trailing comma
expression: "(Int,)"
info:
  kind: Ok
---
Type#4294967040@5
  TypeKind (Tuple)
    TupleType#4294967040@5
      TupleField#4294967040@4
        Type#4294967040@4
          TypeKind (Path)
            Path#4294967040@4 (rooted: false)
              PathSegment#4294967040@3 (name: Int)
