libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__single_field_struct.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Single-field struct
expression: "(name: String)"
info:
  kind: Ok
---
Type#4294967040@6
  TypeKind (Struct)
    StructType#4294967040@6
      StructField#4294967040@5 (name: name)
        Type#4294967040@4
          TypeKind (Path)
            Path#4294967040@4 (rooted: false)
              PathSegment#4294967040@3 (name: String)
